// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Text" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <span
    className="css-1xniryu"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-nm0i8o"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders as block 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-16vxtwd"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders bold 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-k4tiab"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders centered 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-1aut1m8"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders light 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-nurxuk"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders muted 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-9fs502"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders no wrap 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-1hzwasr"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with color 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-1om3prj"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with size 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-veh1h2"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with textTransform 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-17oerc2"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with truncation 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-17oerc2"
  >
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  </span>
</div>
`;

exports[`Utility components renders Bold 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-k4tiab"
  >
    Bold
  </span>
</div>
`;

exports[`Utility components renders Large 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-m3p6w3"
  >
    Large
  </span>
</div>
`;

exports[`Utility components renders Muted 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-9fs502"
  >
    Muted
  </span>
</div>
`;

exports[`Utility components renders Small 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-1mag67q"
  >
    Small
  </span>
</div>
`;

exports[`Utility components renders Uppercase 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <span
    className="css-17oerc2"
  >
    Uppercase
  </span>
</div>
`;
